fixed spacing with buttons

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ img {
 
 .flex {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
+
+
 
